--- a/cameron_gradebook.html
+++ b/cameron_gradebook.html
@@ -41,3 +41,27 @@
     <script src="gradebook.js"></script>
 </body>
 </html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Gradebook</title>
+</head>
+<body>
+  <h1>Student Gradebook</h1>
+  <table id="gradebook" border="1">
+    <thead>
+      <tr>
+        <th>Name</th>
+        <th>Course</th>
+        <th>Grade</th>
+      </tr>
+    </thead>
+    <tbody>
+      <!-- This will be filled by JavaScript -->
+    </tbody>
+  </table>
+
+  <script src="public/gradebook.js"></script>
+</body>
+</html>
