--- a/cameron_gradebook.html
+++ b/cameron_gradebook.html
@@ -1,49 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Gradebook</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 40px;
-            background-color: #f4f4f4;
-        }
-        table {
-            border-collapse: collapse;
-            width: 100%;
-            background-color: white;
-        }
-        th, td {
-            border: 1px solid #ccc;
-            padding: 12px;
-            text-align: left;
-        }
-        th {
-            background-color: #f2f2f2;
-        }
-    </style>
-</head>
-<body>
-    <h1>Gradebook</h1>
-    <table id="gradebookTable">
-        <thead>
-            <tr>
-                <th>Student Name</th>
-                <th>Assignment 1</th>
-                <th>Assignment 2</th>
-                <th>Assignment 3</th>
-            </tr>
-        </thead>
-        <tbody>
-        </tbody>
-    </table>
-    <script src="gradebook.js"></script>
-</body>
-</html>
-<!DOCTYPE html>
-<html lang="en">
-<head>
   <meta charset="UTF-8">
   <title>Gradebook</title>
 </head>
@@ -58,7 +15,7 @@
       </tr>
     </thead>
     <tbody>
-      <!-- This will be filled by JavaScript -->
+      <!-- JavaScript will fill this -->
     </tbody>
   </table>
 
